test-resources/deployment-with-common-label-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  labels:
    admission-policy-test: abc
    app.kubernetes.io/name: myApp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-deployment
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
      - name: sleep
        image: alpine
        command: ["sudo","sh"]
        args: ["-c", "while true; do sleep 1; done"]
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
