test-resources/pod-capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    admission-policy-test: abc
spec:
  containers:
  - name: sleep
    image: alpine
    command: ["sudo", sh"]
    args: ["-c", "while true; do sleep 1; done"]
    securityContext:
      capabilities:
        add:
        - SYS_ADMIN
        - NET_RAW
