test-resources/pod-for-list-items.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    admission-policy-test: abc
    app.kubernetes.io/name: myApp
spec:
  containers:
  - name: sleep
    image: alpine
    command: ["sudo", sh"]
    args: ["-c", "while true; do sleep 1; done"]
    securityContext:
      capabilities:
        add:
        - SYS_ADM
    env :
      - name : azure_batch_key
