test-resources/pod-no-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    admission-policy-test: abc
spec:
  containers:
  - name: sleep
    image: alpine
    command: ["sh"]
    args: ["-c", "while true; do sleep 1; done"]
    ports:
    - containerPort: 8086
