test-resources/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: test-endpoints
  labels:
    admission-policy-test: abc
subsets:
- addresses:
  - ip: 10.0.0.1
  ports:
  - port: 23
    protocol: TCP
