test-resources/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-endpointslice
  labels:
    admission-policy-test: abc
    kubernetes.io/service-name: my-service
addressType: IPv4
ports:
- name: http
  port: 23
  protocol: TCP
endpoints:
- addresses:
  - "10.0.0.1"
