test-resources/policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: placeholder
spec:
  policyName: placeholder
  matchResources:
    objectSelector:
      matchLabels:
        admission-policy-test: abc
